Fixed layout issue

--- a/front-end/src/components/dashboard/dashboard.css
+++ b/front-end/src/components/dashboard/dashboard.css
@@ -7,6 +7,6 @@
 
 .question-list {
   position: absolute;
-  top: 50px;
+  top: 25px;
   margin: 0 30px;
 }
